// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RideContainer should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RideContainer
    month="April"
    rides={
        Array [
            Object {
              "date": "May 8th, 2017",
              "difficulty": "green",
              "distance": "2",
              "elapsedTime": "120",
              "epoch": "1523472606",
              "img": "someurlthing",
              "location": "park",
              "summary": "not sendy",
              "trailName": "lame",
              "userId": "9",
            },
            Object {
              "date": "May 14th, 2017",
              "difficulty": "blue",
              "distance": "5",
              "elapsedTime": "180",
              "epoch": "776232700",
              "img": "someurlthing",
              "location": "hill",
              "summary": "sendy",
              "trailName": "neat",
              "userId": "9",
            },
          ]
    }
    updateRides={[Function]}
    user={
        Object {
            "id": 12,
            "name": "Pat",
            "token": "2y589wyasdfhgfiouqehr8to8",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ride-container-nav"
>
          <withRouter(Connect(DateSelector)) />
          <button
                    className="update-rides"
                    onClick={[Function]}
          >
                    Update Rides
          </button>
</div>,
        <div
          className="card-container"
>
          <RideCard
                    ride={
                              Object {
                                        "date": "May 8th, 2017",
                                        "difficulty": "green",
                                        "distance": "2",
                                        "elapsedTime": "120",
                                        "epoch": "1523472606",
                                        "img": "someurlthing",
                                        "location": "park",
                                        "summary": "not sendy",
                                        "trailName": "lame",
                                        "userId": "9",
                                      }
                    }
          />
</div>,
      ],
      "className": "ride-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(DateSelector)) />,
            <button
              className="update-rides"
              onClick={[Function]}
>
              Update Rides
</button>,
          ],
          "className": "ride-container-nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Update Rides",
              "className": "update-rides",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Update Rides",
            "type": "button",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <RideCard
                ride={
                                Object {
                                                "date": "May 8th, 2017",
                                                "difficulty": "green",
                                                "distance": "2",
                                                "elapsedTime": "120",
                                                "epoch": "1523472606",
                                                "img": "someurlthing",
                                                "location": "park",
                                                "summary": "not sendy",
                                                "trailName": "lame",
                                                "userId": "9",
                                              }
                }
/>,
            ],
            false,
          ],
          "className": "card-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1523472606",
            "nodeType": "function",
            "props": Object {
              "ride": Object {
                "date": "May 8th, 2017",
                "difficulty": "green",
                "distance": "2",
                "elapsedTime": "120",
                "epoch": "1523472606",
                "img": "someurlthing",
                "location": "park",
                "summary": "not sendy",
                "trailName": "lame",
                "userId": "9",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
        ],
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ride-container-nav"
>
            <withRouter(Connect(DateSelector)) />
            <button
                        className="update-rides"
                        onClick={[Function]}
            >
                        Update Rides
            </button>
</div>,
          <div
            className="card-container"
>
            <RideCard
                        ride={
                                    Object {
                                                "date": "May 8th, 2017",
                                                "difficulty": "green",
                                                "distance": "2",
                                                "elapsedTime": "120",
                                                "epoch": "1523472606",
                                                "img": "someurlthing",
                                                "location": "park",
                                                "summary": "not sendy",
                                                "trailName": "lame",
                                                "userId": "9",
                                              }
                        }
            />
</div>,
        ],
        "className": "ride-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(DateSelector)) />,
              <button
                className="update-rides"
                onClick={[Function]}
>
                Update Rides
</button>,
            ],
            "className": "ride-container-nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Update Rides",
                "className": "update-rides",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Update Rides",
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <RideCard
                  ride={
                                    Object {
                                                      "date": "May 8th, 2017",
                                                      "difficulty": "green",
                                                      "distance": "2",
                                                      "elapsedTime": "120",
                                                      "epoch": "1523472606",
                                                      "img": "someurlthing",
                                                      "location": "park",
                                                      "summary": "not sendy",
                                                      "trailName": "lame",
                                                      "userId": "9",
                                                    }
                  }
/>,
              ],
              false,
            ],
            "className": "card-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1523472606",
              "nodeType": "function",
              "props": Object {
                "ride": Object {
                  "date": "May 8th, 2017",
                  "difficulty": "green",
                  "distance": "2",
                  "elapsedTime": "120",
                  "epoch": "1523472606",
                  "img": "someurlthing",
                  "location": "park",
                  "summary": "not sendy",
                  "trailName": "lame",
                  "userId": "9",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
          ],
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`RideContainer should match the snapshot if no rides present 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RideContainer
    rides={Array []}
    updateRides={[Function]}
    user={
        Object {
            "id": 12,
            "name": "Pat",
            "token": "2y589wyasdfhgfiouqehr8to8",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ride-container-nav"
>
          <withRouter(Connect(DateSelector)) />
          <button
                    className="update-rides"
                    onClick={[Function]}
          >
                    Update Rides
          </button>
</div>,
        <div
          className="card-container"
>
          <h6
                    className="none-found"
          >
                    No Rides to Show!
          </h6>
</div>,
      ],
      "className": "ride-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(DateSelector)) />,
            <button
              className="update-rides"
              onClick={[Function]}
>
              Update Rides
</button>,
          ],
          "className": "ride-container-nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Update Rides",
              "className": "update-rides",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Update Rides",
            "type": "button",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <h6
              className="none-found"
>
              No Rides to Show!
</h6>,
          ],
          "className": "card-container",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No Rides to Show!",
              "className": "none-found",
            },
            "ref": null,
            "rendered": "No Rides to Show!",
            "type": "h6",
          },
        ],
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ride-container-nav"
>
            <withRouter(Connect(DateSelector)) />
            <button
                        className="update-rides"
                        onClick={[Function]}
            >
                        Update Rides
            </button>
</div>,
          <div
            className="card-container"
>
            <h6
                        className="none-found"
            >
                        No Rides to Show!
            </h6>
</div>,
        ],
        "className": "ride-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(DateSelector)) />,
              <button
                className="update-rides"
                onClick={[Function]}
>
                Update Rides
</button>,
            ],
            "className": "ride-container-nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Update Rides",
                "className": "update-rides",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Update Rides",
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <h6
                className="none-found"
>
                No Rides to Show!
</h6>,
            ],
            "className": "card-container",
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No Rides to Show!",
                "className": "none-found",
              },
              "ref": null,
              "rendered": "No Rides to Show!",
              "type": "h6",
            },
          ],
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`RideContainer should render all cards if month is All 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RideContainer
    month="All"
    rides={
        Array [
            Object {
              "date": "May 8th, 2017",
              "difficulty": "green",
              "distance": "2",
              "elapsedTime": "120",
              "epoch": "1523472606",
              "img": "someurlthing",
              "location": "park",
              "summary": "not sendy",
              "trailName": "lame",
              "userId": "9",
            },
            Object {
              "date": "May 14th, 2017",
              "difficulty": "blue",
              "distance": "5",
              "elapsedTime": "180",
              "epoch": "776232700",
              "img": "someurlthing",
              "location": "hill",
              "summary": "sendy",
              "trailName": "neat",
              "userId": "9",
            },
          ]
    }
    updateRides={[Function]}
    user={
        Object {
            "id": 12,
            "name": "Pat",
            "token": "2y589wyasdfhgfiouqehr8to8",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="ride-container-nav"
>
          <withRouter(Connect(DateSelector)) />
          <button
                    className="update-rides"
                    onClick={[Function]}
          >
                    Update Rides
          </button>
</div>,
        <div
          className="card-container"
>
          <RideCard
                    ride={
                              Object {
                                        "date": "May 8th, 2017",
                                        "difficulty": "green",
                                        "distance": "2",
                                        "elapsedTime": "120",
                                        "epoch": "1523472606",
                                        "img": "someurlthing",
                                        "location": "park",
                                        "summary": "not sendy",
                                        "trailName": "lame",
                                        "userId": "9",
                                      }
                    }
          />
          <RideCard
                    ride={
                              Object {
                                        "date": "May 14th, 2017",
                                        "difficulty": "blue",
                                        "distance": "5",
                                        "elapsedTime": "180",
                                        "epoch": "776232700",
                                        "img": "someurlthing",
                                        "location": "hill",
                                        "summary": "sendy",
                                        "trailName": "neat",
                                        "userId": "9",
                                      }
                    }
          />
</div>,
      ],
      "className": "ride-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(DateSelector)) />,
            <button
              className="update-rides"
              onClick={[Function]}
>
              Update Rides
</button>,
          ],
          "className": "ride-container-nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Update Rides",
              "className": "update-rides",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Update Rides",
            "type": "button",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            Array [
              <RideCard
                ride={
                                Object {
                                                "date": "May 8th, 2017",
                                                "difficulty": "green",
                                                "distance": "2",
                                                "elapsedTime": "120",
                                                "epoch": "1523472606",
                                                "img": "someurlthing",
                                                "location": "park",
                                                "summary": "not sendy",
                                                "trailName": "lame",
                                                "userId": "9",
                                              }
                }
/>,
              <RideCard
                ride={
                                Object {
                                                "date": "May 14th, 2017",
                                                "difficulty": "blue",
                                                "distance": "5",
                                                "elapsedTime": "180",
                                                "epoch": "776232700",
                                                "img": "someurlthing",
                                                "location": "hill",
                                                "summary": "sendy",
                                                "trailName": "neat",
                                                "userId": "9",
                                              }
                }
/>,
            ],
            false,
          ],
          "className": "card-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1523472606",
            "nodeType": "function",
            "props": Object {
              "ride": Object {
                "date": "May 8th, 2017",
                "difficulty": "green",
                "distance": "2",
                "elapsedTime": "120",
                "epoch": "1523472606",
                "img": "someurlthing",
                "location": "park",
                "summary": "not sendy",
                "trailName": "lame",
                "userId": "9",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "776232700",
            "nodeType": "function",
            "props": Object {
              "ride": Object {
                "date": "May 14th, 2017",
                "difficulty": "blue",
                "distance": "5",
                "elapsedTime": "180",
                "epoch": "776232700",
                "img": "someurlthing",
                "location": "hill",
                "summary": "sendy",
                "trailName": "neat",
                "userId": "9",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
        ],
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="ride-container-nav"
>
            <withRouter(Connect(DateSelector)) />
            <button
                        className="update-rides"
                        onClick={[Function]}
            >
                        Update Rides
            </button>
</div>,
          <div
            className="card-container"
>
            <RideCard
                        ride={
                                    Object {
                                                "date": "May 8th, 2017",
                                                "difficulty": "green",
                                                "distance": "2",
                                                "elapsedTime": "120",
                                                "epoch": "1523472606",
                                                "img": "someurlthing",
                                                "location": "park",
                                                "summary": "not sendy",
                                                "trailName": "lame",
                                                "userId": "9",
                                              }
                        }
            />
            <RideCard
                        ride={
                                    Object {
                                                "date": "May 14th, 2017",
                                                "difficulty": "blue",
                                                "distance": "5",
                                                "elapsedTime": "180",
                                                "epoch": "776232700",
                                                "img": "someurlthing",
                                                "location": "hill",
                                                "summary": "sendy",
                                                "trailName": "neat",
                                                "userId": "9",
                                              }
                        }
            />
</div>,
        ],
        "className": "ride-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(DateSelector)) />,
              <button
                className="update-rides"
                onClick={[Function]}
>
                Update Rides
</button>,
            ],
            "className": "ride-container-nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Update Rides",
                "className": "update-rides",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Update Rides",
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              Array [
                <RideCard
                  ride={
                                    Object {
                                                      "date": "May 8th, 2017",
                                                      "difficulty": "green",
                                                      "distance": "2",
                                                      "elapsedTime": "120",
                                                      "epoch": "1523472606",
                                                      "img": "someurlthing",
                                                      "location": "park",
                                                      "summary": "not sendy",
                                                      "trailName": "lame",
                                                      "userId": "9",
                                                    }
                  }
/>,
                <RideCard
                  ride={
                                    Object {
                                                      "date": "May 14th, 2017",
                                                      "difficulty": "blue",
                                                      "distance": "5",
                                                      "elapsedTime": "180",
                                                      "epoch": "776232700",
                                                      "img": "someurlthing",
                                                      "location": "hill",
                                                      "summary": "sendy",
                                                      "trailName": "neat",
                                                      "userId": "9",
                                                    }
                  }
/>,
              ],
              false,
            ],
            "className": "card-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1523472606",
              "nodeType": "function",
              "props": Object {
                "ride": Object {
                  "date": "May 8th, 2017",
                  "difficulty": "green",
                  "distance": "2",
                  "elapsedTime": "120",
                  "epoch": "1523472606",
                  "img": "someurlthing",
                  "location": "park",
                  "summary": "not sendy",
                  "trailName": "lame",
                  "userId": "9",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "776232700",
              "nodeType": "function",
              "props": Object {
                "ride": Object {
                  "date": "May 14th, 2017",
                  "difficulty": "blue",
                  "distance": "5",
                  "elapsedTime": "180",
                  "epoch": "776232700",
                  "img": "someurlthing",
                  "location": "hill",
                  "summary": "sendy",
                  "trailName": "neat",
                  "userId": "9",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
          ],
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
